--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-aioredis==2.0.1
 annotated-types==0.6.0
 anyio==4.3.0
 async-timeout==4.0.3
+bcrypt==4.1.2
 click==8.1.7
 colorama==0.4.6
 dnspython==2.6.1
@@ -15,9 +15,8 @@ pydantic_core==2.16.3
 PyJWT==2.8.0
 pymongo==4.6.3
 python-dotenv==1.0.1
+python-multipart==0.0.9
 sniffio==1.3.1
 starlette==0.36.3
 typing_extensions==4.10.0
 uvicorn==0.29.0
-python-multipart-0.0.9
-bcrypt-4.1.2
