--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ PyJWT==2.8.0
 pymongo==4.6.3
 python-dotenv==1.0.1
 python-multipart==0.0.9
+redis==5.0.3
 sniffio==1.3.1
 starlette==0.36.3
 typing_extensions==4.10.0
